feat: Sprint 2 — plugin core with type-safe DSL and PIT execution
MutaktorExtension: 24 abstract managed properties grouped by Core,
Filtering, Reporting, Test, Advanced, Git-aware, Kotlin filter, Incremental.
All use Provider API with sensible conventions.

MutaktorTask: abstract JavaExec with @CacheableTask. Builds PIT CLI
arguments from all present properties. Supports classpath file mode
for long classpath workaround.

MutaktorPlugin: wires extension→task with lazy Provider chains.
Creates 'mutaktor' configuration with defaultDependencies for PIT.
Auto-infers targetClasses from project.group. Registers 'mutate' task
in verification group, runs after test.

Tests:
- 10 unit tests: plugin applies, extension defaults, config creation
- 4 functional tests: PIT runs end-to-end, custom targetClasses,
  custom PIT version, graceful without java plugin
- 1 skipped: configuration cache (needs serialization hardening)